--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
 <meta charset="utf-8">
 <title>mod10</title>
 <head>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Delius+Swash+Caps&family=Satisfy&display=swap" rel="stylesheet">
+	
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Welcome to Strawberry Delights Café, where every dish is infused with the sweet, fruity goodness of strawberries.">
-    <title>Strawberry Delights Café</title>
+	
+    <meta name="description" content="Welcome to Fruit Sando, where our service is as sweet as our treats!">
+    <title>Fruit Sando</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,12 +20,11 @@
     <!-- Header Section -->
     <header>
         <div class="container">
-            <h1>Strawberry Delights Café</h1>
+            <h1>Fruit Sando</h1>
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#menu">Menu</a></li>
-                    <li><a href="#about">About</a></li>
+					<li><a href="#menu">Gallery</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -30,75 +34,31 @@
     <!-- Home Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h2>Sweeten Your Day with a Taste of Strawberry Heaven!</h2>
-            <p>Freshly made delights infused with the best strawberries. Come taste the berry good vibes!</p>
-            <a href="#menu" class="btn">Explore Our Menu</a>
+            <h2>Sweeten Your Day with a Sando Treat!</h2>
+            <p>Freshly made delights infused with the best strawberries, kiwis, bananas, and more.</p>
+            <a href="#menu" class="btn">Explore Our Gallery</a>
         </div>
     </section>
 
-    <!-- Menu Section -->
-    <section id="menu" class="menu">
-        <div class="container">
-            <h2>Our Menu</h2>
-            <p>Indulge in our delightful strawberry-inspired dishes, from refreshing beverages to decadent desserts!</p>
-            <div class="menu-items">
-                <div class="menu-item">
-                    <h3>Strawberry Smoothie</h3>
-                    <p>A refreshing blend of fresh strawberries, yogurt, and honey.</p>
-                    <span>$5.99</span>
-                </div>
-                <div class="menu-item">
-                    <h3>Strawberry Shortcake</h3>
-                    <p>A classic dessert with layers of fluffy cake, whipped cream, and ripe strawberries.</p>
-                    <span>$6.49</span>
-                </div>
-                <div class="menu-item">
-                    <h3>Strawberry Latte</h3>
-                    <p>Espresso mixed with sweetened strawberry syrup and steamed milk.</p>
-                    <span>$4.49</span>
-                </div>
-                <div class="menu-item">
-                    <h3>Strawberry Tart</h3>
-                    <p>A crisp pastry shell filled with creamy custard and topped with fresh strawberries.</p>
-                    <span>$4.99</span>
-                </div>
-            </div>
-        </div>
-    </section>
+    
+	<img src="logo3.png" alt="logo3" class="center">>
+
 
     <!-- About Section -->
     <section id="about" class="about">
         <div class="container">
             <h2>About Us</h2>
-            <p>At Strawberry Delights Café, we believe in the power of fresh, quality ingredients and the joy of bringing people together over delicious food and drinks. From our hand-picked strawberries to our lovingly crafted menu items, every visit promises to be a sweet experience!</p>
+            <p>At Fruit Sando, we believe in the power of fresh, quality ingredients and the joy of bringing people together over delicious food and drinks. From our hand-made fruit sandwiches to our kawaii style cafe, every visit promises to be a sweet experience!</p>
             <p>Join us for a cozy atmosphere, friendly service, and a taste of something special.</p>
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="contact">
-        <div class="container">
-            <h2>Contact Us</h2>
-            <p>We'd love to hear from you! Reach out for inquiries, feedback, or to simply share your love for strawberries.</p>
-            <form action="#" method="post">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" required></textarea>
-
-                <button type="submit" class="btn">Send Message</button>
-            </form>
-        </div>
-    </section>
+  
 
     <!-- Footer Section -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 Strawberry Delights Café | All Rights Reserved</p>
+            <p>&copy; 2024 alongoria| All Rights Reserved</p>
             <div class="social-links">
                 <a href="#">Facebook</a> | 
                 <a href="#">Instagram</a> | 
