--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <ul>
                     <li><a href="#home">Home</a></li>
 					<li><a href="#menu">Gallery</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="https://angellongoria.github.io/contactpage/">Contact</a></li>
                 </ul>
             </nav>
         </div>
