--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         <div class="container">
             <p>&copy; 2024 alongoria| All Rights Reserved</p>
             <div class="social-links">
-                <a href="#">Facebook</a> | 
-                <a href="#">Instagram</a> | 
-                <a href="#">Twitter</a>
+                <a href="https://www.facebook.com/">Facebook</a> | 
+                <a href="https://www.instagram.com/">Instagram</a> | 
+                <a href="https://x.com/">Twitter</a>
             </div>
         </div>
     </footer>
